# rust_figlet

./: Cargo.toml  README.md
.github/workflows/: linux.yml  macos.yml  windows.yml
src/: figlet.rs  main.rs  network.rs
